fix: prevent overlapping of content elements
the box shadow caused the problem, that content could be overlapped. The box shadow now respects the margin between content elements (frame elements)
Also the z-index of the footer had to be adjusted in order to prevent an overlapping of the box-shadow of last content element

--- a/packages/xm_dkfz_net_prototype/source/_patterns/components/footer/footer.scss
+++ b/packages/xm_dkfz_net_prototype/source/_patterns/components/footer/footer.scss
@@ -21,6 +21,7 @@
     padding: 1.5rem 0;
     color: var(--color-white);
     background: var(--color-primary);
+    z-index: 1;
 
     @include media-breakpoint-up(md) {
         flex-direction: row;
